[gd_scene load_steps=4 format=3 uid="uid://o7keiuh8p7ql"]

[ext_resource type="Texture2D" uid="uid://bnaaux7kwtar3" path="res://assets/menu/menu_bg.png" id="1_7t50q"]
[ext_resource type="Script" path="res://Scenes/level/object_intro.gd" id="1_xywlk"]
[ext_resource type="Theme" uid="uid://cvhrwgxh48p4h" path="res://Scenes/level/custom_theme.tres" id="3_6c71e"]

[node name="ObjectIntro" type="Node2D"]
script = ExtResource("1_xywlk")

[node name="MenuBg" type="Sprite2D" parent="."]
position = Vector2(640, 352)
texture = ExtResource("1_7t50q")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 746.0
offset_top = 110.0
offset_right = 1078.0
offset_bottom = 460.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1278.0
offset_bottom = 705.0
theme = ExtResource("3_6c71e")

[node name="TextPanel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 836.0
offset_top = 36.0
offset_right = 1252.0
offset_bottom = 669.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextPanel"]
layout_mode = 0
offset_right = 399.0
offset_bottom = 583.0
text = " Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla turpis magna, cursus sit amet, suscipit a, interdum id, felis. Aliquam in lorem sit amet leo accumsan lacinia. In convallis. Duis risus. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Proin in tellus sit amet nibh dignissim sagittis. Etiam ligula pede, sagittis quis, interdum ultricies, scelerisque eu. Etiam egestas wisi a erat. Integer malesuada. Nunc auctor. Nullam rhoncus aliquam metus. Duis pulvinar. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duis bibendum, lectus ut viverra rhoncus, dolor nunc faucibus libero, eget facilisis enim ipsum id lacus.

Cras elementum. Mauris metus. Nam quis nulla. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Integer lacinia. Nullam sit amet magna in magna gravida vehicula. Maecenas sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Ut tempus purus at lorem. Mauris dolor felis, sagittis at, luctus sed, aliquam non, tellus.

Aliquam erat volutpat. Nulla quis diam. Nulla non lectus sed nisl molestie malesuada. Integer in sapien. Duis pulvinar. Aenean vel massa quis mauris vehicula lacinia. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus enim erat, vestibulum vel, aliquam a, posuere eu, velit. Integer pellentesque quam vel velit. Quisque tincidunt scelerisque libero. Nullam at arcu a est sollicitudin euismod. Maecenas ipsum velit, consectetuer eu lobortis ut, dictum at dui. "
visible_characters = 0
visible_ratio = 0.0

[node name="ButtonPanel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 26.0
offset_top = 570.0
offset_right = 833.0
offset_bottom = 663.0

[node name="ButtonBack" type="Button" parent="Control/ButtonPanel"]
layout_mode = 0
offset_left = 590.0
offset_top = 9.0
offset_right = 794.0
offset_bottom = 81.0
text = "back"

[node name="ButtonNext" type="Button" parent="Control/ButtonPanel"]
layout_mode = 0
offset_left = 311.0
offset_top = 8.0
offset_right = 515.0
offset_bottom = 80.0
text = "next"

[node name="ButtonPrev" type="Button" parent="Control/ButtonPanel"]
layout_mode = 0
offset_left = 21.0
offset_top = 7.0
offset_right = 225.0
offset_bottom = 79.0
text = "previous"

[node name="Show_object" type="Node" parent="."]

[connection signal="pressed" from="Control/ButtonPanel/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Control/ButtonPanel/ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="Control/ButtonPanel/ButtonPrev" to="." method="_on_button_prev_pressed"]
